# dazzle

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/skills/creating-github-issues/: SKILL.md
.claude/skills/creating-pull-requests/: SKILL.md
.claude/skills/git-rebase/: SKILL.md
.claude/skills/git-rebase/references/: conflict-analysis.md  ours-vs-theirs.md
.claude/skills/git-rebase/scripts/: rebase-context.sh
.github/: dependabot.yml
.github/workflows/: check.yml  claude-code-review.yml  claude.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  config.rs  lib.rs  printing.rs  server.rs
src-tauri/wix/: autostart.wxs
src/components/: PrintLog.test.tsx  PrintLog.tsx  PrinterSelect.test.tsx  PrinterSelect.tsx  ServerStatus.test.tsx  ServerStatus.tsx  TitleBar.test.tsx  TitleBar.tsx
src/store/: index.test.ts  index.ts
src/test/: setup.ts
src/types/: index.ts
