[package]
name = "dazzle"
version = "0.1.0"
description = "A lightweight, cross-platform ZPL print server for thermal label printers"
authors = ["Stirling Marketing Group"]
license = "MIT"
repository = "https://github.com/StirlingMarketingGroup/dazzle"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["tray-icon"] }
tauri-plugin-log = "2.3.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
dirs = "6.0"

# HTTP server for receiving print jobs
axum = "0.8"
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Registry"] }

